# smart_rooms

modules/: NodoConteo.py  buzzer.py  package.xml
smart_rooms_disinfection/: CMakeLists.txt  package.xml
smart_rooms_disinfection/config/: request_manager.yaml  robot_manager.yaml  room1.csv  room2.csv  room3.csv  room4.csv  room5.csv  room6.csv  trajectories.yaml
smart_rooms_disinfection/launch/: disinfection_managers.launch
smart_rooms_disinfection/scripts/: request_manager.py  robot_manager.py
smart_rooms_gazebo/: CMakeLists.txt  package.xml
smart_rooms_gazebo/launch/: multi_classroom.launch  multi_classroom_husky.launch
smart_rooms_gazebo/worlds/: classroom.world  multi_classroom.world
smart_rooms_modules/: CMakeLists.txt
smart_rooms_modules/config/: orchestrator.yaml  rooms.yaml  sensors_acquisition.yaml
smart_rooms_modules/launch/: orchestrator.launch  sensors_acquisition.launch
smart_rooms_modules/scripts/: MS.py  NodoDesinfeccion.py  orchestrator.py  room_watcher.py  sensors_acquisition.py
smart_rooms_msgs/: CMakeLists.txt  package.xml
smart_rooms_msgs/msg/: EmergencyStamped.msg  RoomStamped.msg  RoomStampedList.msg
smart_rooms_navigation/: CMakeLists.txt  package.xml
smart_rooms_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  layout.rviz  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_diff_params.yaml
smart_rooms_navigation/launch/: amcl.launch  gmapping.launch  move_base_amcl.launch
smart_rooms_navigation/maps/: map.pgm  map_ed.pgm
